<resources>
    <string name="appName">Wizard</string>
    <!--MainActivity-->
    <string name="createLobby">Create Lobby</string>
    <string name="joinLobby">Join Lobby</string>
    <string name="tmpGameActivity">Game Activity</string>
    <!--RegisterActivity-->
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="alreadyHaveAccount"><u>Already have an account?\nLogin</u></string>
    <string name="registerFailed">Registration failed</string>
    <!--LoginActivity-->
    <string name="login">Login</string>
    <string name="noAccountYet"><u>No account yet?\nCreate one</u></string>
    <string name="loginFailed">Login failed</string>
    <!--LobbyActivity-->
    <string name="lobbyCode">Code: %s</string>
    <string name="lobbyLeave">Leave Lobby</string>
    <string name="lobbyStart">Start</string>
    <string name="lobby">Lobby</string>
    <string name="lobbyPlayersPlayerNamePlaceholder">Player</string>
    <string name="lobbyPlayersKick">Kick</string>
    <!--GameActivity-->
    <string name="cardImageDescription">Wizard card</string>
    <string name="triangleIconDescription">Triangle icon</string>
    <string name="fourPointStarIconDescription">Four point star icon</string>
    <string name="starIconDescription">Star icon</string>
    <string name="hexagonIconDescription">Hexagon icon</string>
    <string name="gameShowPoints">Show Points</string>
    <string name="gamePredictTrickNumber">Predict the number of tricks for this round!</string>
    <string name="gamePredictionScore">Highest score with your Prediction:</string>
    <string name="gameConfirm">Confirm</string>
    <string name="gameRoundPlaceholder">Round: %1$d of %2$d</string>
    <string name="tmpMenu">Menu</string>
    <string name="tmpChangeFragment">Change fragment</string>
    <string name="gamePlayer1Card">Player 1 Card</string>
    <string name="gamePlayer2Card">Player 2 Card</string>
    <string name="gamePlayer3Card">Player 3 Card</string>
    <string name="gamePlayer4Card">Player 4 Card</string>
    <string name="gamePlayer5Card">Player 5 Card</string>
    <string name="gamePlayer6Card">Player 6 Card</string>
    <string name="gameNoPoints">00</string>
    <string name="defaultPredictionScore">20 Points</string>
    <!--CreateLobbyActivity-->
    <string name="createLobbyText">Create Lobby</string>
    <string name="createLobbyMenu">Back</string>
    <string name="createLobbyCreate">Create</string>
    <string name="createLobbyIsPublic">Public?</string>
    <string name="createLobbyMaxPlayerText">Maximum number of players: %d</string>
    <string name="createLobbyMaxRoundsText">Maximum number of rounds: %d</string>
    <!--JoinLobbyActivity-->
    <string name="joinLobbyText">Join Lobby</string>
    <string name="joinLobbyLobbyCode">Join Lobby with code</string>
    <string name="joinLobbyMenu">Back</string>
    <string name="joinlobbyLobbyLobbyNamePlaceholder">LobbyName</string>
    <string name="joinlobbyLobbyJoinBtn">Join</string>
    <string name="joinlobbyLobbyPlayerCountPlaceholder">%1$d/%2$d</string>
    <string name="createLobbyName">Name</string>
    <string name="tmp_result_activity">Result Activity</string>
    <string name="back_to_home">Back to home</string>
    <string name="resulting_score">Resulting score</string>
</resources>