<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateLobbyActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/createLobbyText"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMenu"
        style="@style/btnGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:onClick="btnMainActivity"
        android:text="@string/createLobbyMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCreate"
        style="@style/btnPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:onClick="btnCreateLobby"
        android:text="@string/createLobbyCreate"
        app:layout_constraintBottom_toTopOf="@+id/btnMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxIsPublic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:scaleX="1.50"
        android:scaleY="1.50"
        style="@style/checkbox"

        android:text="@string/createLobbyIsPublic"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputName" />

    <EditText
        android:id="@+id/inputName"
        style="@style/EditTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/createLobbyName"
        android:inputType="text"
        android:text="@string/createLobbyName"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.slider.Slider
        android:id="@+id/sliderMaxPlayers"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:stepSize="1"
        android:valueFrom="3"
        android:valueTo="6"
        style="@style/slider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMaxPlayers" />

    <TextView
        android:id="@+id/txtMaxPlayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        style="@style/textView"
        android:text="@string/createLobbyMaxPlayerText"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxIsPublic" />

    <TextView
        android:id="@+id/txtMaxRounds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/textView"
        android:text="@string/createLobbyMaxRoundsText"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sliderMaxPlayers" />

    <com.google.android.material.slider.Slider
        android:id="@+id/sliderMaxRounds"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:stepSize="1"
        android:value="5"
        android:valueFrom="1"
        android:valueTo="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMaxRounds" />


</androidx.constraintlayout.widget.ConstraintLayout>