<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.GameScreenFourPlayersFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivGameScreenCenter"
            android:layout_width="150dp"
            android:layout_height="115dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/four_point_star"
            android:contentDescription="@string/fourPointStarIconDescription"/>

        <ImageView
            android:id="@+id/ivPlayer1Card"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivGameScreenCenter"
            app:srcCompat="@drawable/card_border_default"
            android:contentDescription="@string/gamePlayer1Card"/>

        <ImageView
            android:id="@+id/ivPlayer2Card"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:layout_marginBottom="30dp"
            android:rotation="-90"
            app:layout_constraintBottom_toTopOf="@+id/ivPlayer1Card"
            app:layout_constraintEnd_toStartOf="@+id/ivGameScreenCenter"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/card_border_default"
            android:contentDescription="@string/gamePlayer2Card"/>

        <ImageView
            android:id="@+id/ivPlayer3Card"
            android:name="at.aau.serg.fragments.CardsFragment"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:layout_marginBottom="30dp"
            android:rotation="0"
            app:layout_constraintBottom_toTopOf="@+id/ivGameScreenCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/card_border_default"
            android:contentDescription="@string/gamePlayer3Card"/>

        <ImageView
            android:id="@+id/ivPlayer4Card"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:layout_marginBottom="30dp"
            android:rotation="90"
            app:layout_constraintBottom_toTopOf="@+id/ivPlayer1Card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ivGameScreenCenter"
            app:srcCompat="@drawable/card_border_default"
            android:contentDescription="@string/gamePlayer4Card"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>