<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.GameScreenSixPlayersFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivGameScreenCenter"
            android:layout_width="120dp"
            android:layout_height="115dp"
            android:contentDescription="@string/hexagonIconDescription"
            android:rotation="-180"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/hexagon" />

        <ImageView
            android:id="@+id/ivPlayer1Card"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toStartOf="@+id/ivPlayer6Card"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ivPlayer2Card"
            app:layout_constraintTop_toBottomOf="@+id/ivGameScreenCenter"
            app:srcCompat="@drawable/card_border_default"
            android:contentDescription="@string/gamePlayer1Card"/>

        <ImageView
            android:id="@+id/ivPlayer2Card"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:layout_marginTop="-30dp"
            android:rotation="-130"
            app:layout_constraintEnd_toStartOf="@+id/ivPlayer1Card"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivGameScreenCenter"
            app:srcCompat="@drawable/card_border_default"
            android:contentDescription="@string/gamePlayer2Card"/>

        <ImageView
            android:id="@+id/ivPlayer3Card"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="-28dp"
            android:contentDescription="@string/gamePlayer3Card"
            android:rotation="-35"
            app:layout_constraintBottom_toTopOf="@+id/ivGameScreenCenter"
            app:layout_constraintEnd_toStartOf="@+id/ivPlayer4Card"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/card_border_default" />

        <ImageView
            android:id="@+id/ivPlayer4Card"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toTopOf="@+id/ivGameScreenCenter"
            app:layout_constraintEnd_toStartOf="@+id/ivPlayer5Card"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ivPlayer3Card"
            app:srcCompat="@drawable/card_border_default"
            android:contentDescription="@string/gamePlayer4Card"/>

        <ImageView
            android:id="@+id/ivPlayer5Card"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="-28dp"
            android:contentDescription="@string/gamePlayer5Card"
            android:rotation="35"
            app:layout_constraintBottom_toTopOf="@+id/ivGameScreenCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ivPlayer4Card"
            app:srcCompat="@drawable/card_border_default" />

        <ImageView
            android:id="@+id/ivPlayer6Card"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:layout_marginTop="-30dp"
            android:rotation="130"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ivPlayer1Card"
            app:layout_constraintTop_toBottomOf="@+id/ivGameScreenCenter"
            app:srcCompat="@drawable/card_border_default"
            android:contentDescription="@string/gamePlayer6Card"/>

        <TextView
            android:id="@+id/tvPlayer1Points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gameNoPoints"
            app:layout_constraintBottom_toTopOf="@+id/ivPlayer1Card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivGameScreenCenter"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/tvPlayer2Points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="-16dp"
            android:text="@string/gameNoPoints"
            app:layout_constraintBottom_toTopOf="@+id/ivPlayer2Card"
            app:layout_constraintEnd_toStartOf="@+id/ivGameScreenCenter"
            app:layout_constraintStart_toEndOf="@+id/ivPlayer2Card" />

        <TextView
            android:id="@+id/tvPlayer3Points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="-32dp"
            android:text="@string/gameNoPoints"
            app:layout_constraintBottom_toTopOf="@+id/ivGameScreenCenter"
            app:layout_constraintEnd_toStartOf="@+id/ivGameScreenCenter"
            app:layout_constraintStart_toEndOf="@+id/ivPlayer3Card" />

        <TextView
            android:id="@+id/tvPlayer4Points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gameNoPoints"
            app:layout_constraintBottom_toTopOf="@+id/ivGameScreenCenter"
            app:layout_constraintEnd_toStartOf="@+id/ivPlayer5Card"
            app:layout_constraintStart_toEndOf="@+id/ivPlayer3Card"
            app:layout_constraintTop_toBottomOf="@+id/ivPlayer4Card" />

        <TextView
            android:id="@+id/tvPlayer5Points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="-32dp"
            android:text="@string/gameNoPoints"
            app:layout_constraintBottom_toTopOf="@+id/ivGameScreenCenter"
            app:layout_constraintEnd_toStartOf="@+id/ivPlayer5Card"
            app:layout_constraintStart_toEndOf="@+id/ivGameScreenCenter" />

        <TextView
            android:id="@+id/tvPlayer6Points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="-16dp"
            android:text="@string/gameNoPoints"
            app:layout_constraintBottom_toTopOf="@+id/ivPlayer6Card"
            app:layout_constraintEnd_toStartOf="@+id/ivPlayer6Card"
            app:layout_constraintStart_toEndOf="@+id/ivGameScreenCenter" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>